--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,8 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="ActionBar" parent="MaterialDrawerTheme.Light.DarkToolbar.TranslucentStatus">
+        <item name="android:textColor">@color/md_white_1000</item>
+    </style>
+
 </resources>
