--- a/app/src/main/res/layout/activity_create_alarm.xml
+++ b/app/src/main/res/layout/activity_create_alarm.xml
@@ -21,5 +21,10 @@
         android:layout_below="@+id/toolbar"
         android:id="@+id/frame_container">
 
+        <TimePicker
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timePicker"
+            android:layout_gravity="center" />
     </FrameLayout>
 </RelativeLayout>
