--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/abc_action_bar_default_height_material"
         android:background="@color/colorPrimary"
-        android:elevation="4dp" />
+        android:elevation="4dp"
+        android:layout_alignParentTop="true" />
 
     <ExpandableListView
         android:id="@+id/expandableListView"
