--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,32 +25,26 @@
             android:layout_height="wrap_content"
             android:text="@string/setAlarm"
             android:id="@+id/button"
-            android:layout_marginBottom="56dp"
+            android:layout_marginBottom="45dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="56dp"
-            android:layout_marginStart="56dp"/>
+            android:layout_alignLeft="@+id/timePicker"
+            android:layout_alignStart="@+id/timePicker"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancelAlarm"
             android:id="@+id/button2"
-            android:layout_alignTop="@+id/button"
-            android:layout_toRightOf="@+id/button"
-            android:layout_toEndOf="@+id/button"
-            android:layout_marginLeft="53dp"
-            android:layout_marginStart="53dp"/>
+            android:layout_below="@+id/timePicker"
+            android:layout_alignRight="@+id/timePicker"
+            android:layout_alignEnd="@+id/timePicker"/>
 
         <TimePicker
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/timePicker2"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_alignLeft="@+id/button"
-            android:layout_alignStart="@+id/button"/>
+            android:id="@+id/timePicker"
+            android:layout_above="@+id/button"
+            android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
 </RelativeLayout>
