--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,39 +1,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="concentric.medalarm.activity.AlarmActivity">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:context="concentric.medalarm.activity.AlarmActivity"
+                android:gravity="center">
 
-    <TimePicker
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/ActionBar"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/timePicker2"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/onButton"
         android:id="@+id/toggleButton"
+        android:onClick="onToggleClicked"
         android:layout_below="@+id/timePicker2"
-        android:layout_centerHorizontal="true"
-        android:onClick="onToggleClicked"/>
+        android:layout_centerHorizontal="true"/>
 
-    <TextView
+    <TimePicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=""
-        android:id="@+id/alarmText"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/alarmToggle" />
+        android:id="@+id/timePicker2"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignLeft="@+id/timePicker2"
+        android:layout_alignStart="@+id/timePicker2"
+        android:layout_marginTop="44dp"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
