--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -45,9 +45,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="M"
-        android:textAlignment="above"
         android:id="@+id/checkBox2"
-        android:layout_toRightOf="@+id/checkBox"/>
+        android:layout_alignTop="@+id/checkBox"
+        android:layout_toRightOf="@+id/checkBox"
+        android:layout_toEndOf="@+id/checkBox"/>
 
     <CheckBox
         android:layout_width="wrap_content"
