--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -19,23 +19,28 @@
         android:layout_height="wrap_content"
         android:hint="@string/medName"
         android:textAlignment="center"
-        android:id="@+id/editText"
+        android:id="@+id/medName"
         android:layout_below="@+id/toolbar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="27dp"/>
 
-    <ExpandableListView
-        android:layout_width="match_parent"
+    <EditText
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/expandableListView"
-        android:layout_below="@+id/editText"
+        android:inputType="time"
+        android:ems="10"
+        android:id="@+id/medTime"
+        android:layout_below="@+id/medName"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:hint="Time"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Su"
+        android:text="@string/checkBox_Sunday"
         android:id="@+id/checkBox"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
@@ -44,7 +49,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="M"
+        android:text="@string/checkBox_Monday"
         android:id="@+id/checkBox2"
         android:layout_alignTop="@+id/checkBox"
         android:layout_toRightOf="@+id/checkBox"
@@ -53,7 +58,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="T"
+        android:text="@string/checkBox_Tuesday"
         android:id="@+id/checkBox3"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/checkBox2"/>
@@ -61,7 +66,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="W"
+        android:text="@string/checkBox_Wednesday"
         android:id="@+id/checkBox4"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/checkBox3"/>
@@ -69,7 +74,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Th"
+        android:text="@string/checkBox_Thursday"
         android:id="@+id/checkBox5"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/checkBox4"/>
@@ -77,7 +82,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="F"
+        android:text="@string/checkBox_Friday"
         android:id="@+id/checkBox6"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/checkBox5"/>
@@ -85,10 +90,18 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sa"
+        android:text="@string/checkBox_Saturday"
         android:id="@+id/checkBox7"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/checkBox6"
-        android:layout_alignEnd="@+id/checkBox6"/>
+        />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_below="@+id/medTime"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
