--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -35,60 +35,57 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Su"
-        android:id="@+id/checkBox"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="M"
-        android:id="@+id/checkBox2"
-        android:layout_alignTop="@+id/checkBox"
-        android:layout_toRightOf="@+id/checkBox"
-        android:layout_toEndOf="@+id/checkBox"/>
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="T"
-        android:id="@+id/checkBox3"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/checkBox2"/>
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="W"
-        android:id="@+id/checkBox4"
+        android:id="@+id/wednesday"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/checkBox3"/>
+        android:layout_centerHorizontal="true"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Th"
-        android:id="@+id/checkBox5"
+        android:id="@+id/thursday"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/checkBox4"/>
+        android:layout_toRightOf="@+id/wednesday"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="F"
-        android:id="@+id/checkBox6"
+        android:id="@+id/friday"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/checkBox5"/>
+        android:layout_toRightOf="@+id/thursday"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sa"
-        android:id="@+id/checkBox7"
+        android:id="@+id/saturday"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/checkBox6"
-        android:layout_alignEnd="@+id/checkBox6"/>
+        android:layout_toRightOf="@+id/friday"/>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tu"
+        android:id="@+id/tuesday"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/wednesday"/>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="M"
+        android:id="@+id/monday"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/tuesday"/>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Su"
+        android:id="@+id/thelordsday"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/monday"/>
 
 </RelativeLayout>
