--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="27dp"/>
 
     <CheckBox
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkBox_Wednesday"
@@ -33,6 +34,7 @@
         android:layout_centerHorizontal="true"/>
 
     <CheckBox
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkBox_Thursday"
@@ -41,6 +43,7 @@
         android:layout_toRightOf="@+id/wednesday"/>
 
     <CheckBox
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkBox_Friday"
@@ -49,6 +52,7 @@
         android:layout_toRightOf="@+id/thursday"/>
 
     <CheckBox
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkBox_Saturday"
@@ -57,6 +61,7 @@
         android:layout_toRightOf="@+id/friday"/>
 
     <CheckBox
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkBox_Tuesday"
@@ -65,6 +70,7 @@
         android:layout_toLeftOf="@+id/wednesday"/>
 
     <CheckBox
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkBox_Monday"
@@ -73,6 +79,7 @@
         android:layout_toLeftOf="@+id/tuesday"/>
 
     <CheckBox
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkBox_Sunday"
@@ -80,5 +87,13 @@
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/monday"
         android:focusableInTouchMode="true"/>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
