--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,16 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        style="@style/ActionBar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentEnd="false"
-        android:layout_toStartOf="@android:id/home"/>
+        android:layout_alignParentRight="false"
+        android:layout_toStartOf="@android:id/home"
+        android:layout_toLeftOf="@android:id/home"
+        android:theme="@style/ToolBar"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/actionButton"
@@ -26,7 +28,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="5dp"
         android:layout_marginEnd="5dp"
-        android:nestedScrollingEnabled="false"
         android:onClick="onClickActionButton"/>
 
     <ListView
