More Refinements to the activities.

--- a/app/src/main/res/layout/activity_create_alarm.xml
+++ b/app/src/main/res/layout/activity_create_alarm.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        style="@style/ToolBar" />
+        style="@style/AppTheme.ToolBar" />
 
     <FrameLayout
         android:layout_width="match_parent"
