--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,23 +1,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="concentric.medalarm.activity.AlarmActivity"
     >
 
     <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
-        style="@style/ToolBar"
+        style="@style/AppTheme.ToolBar"
+        android:theme="@style/AppTheme.ToolBar"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:elevation="4dp"/>
+        android:layout_height="@dimen/abc_action_bar_default_height_material"
+        android:elevation="4dp"
+        android:transitionGroup="false"
+        android:background="@color/primary"/>
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        >
 
         <EditText
             android:layout_width="fill_parent"
@@ -32,61 +36,77 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <CheckBox
-                android:visibility="visible"
+            <view
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/checkBox_Wednesday"
-                android:id="@+id/wednesday"
-                android:singleLine="false"/>
-
-            <CheckBox
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/checkBox_Thursday"
-                android:id="@+id/thursday"
-                />
-
-            <CheckBox
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/checkBox_Friday"
-                android:id="@+id/friday"
-                />
-
-            <CheckBox
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/checkBox_Saturday"
-                android:id="@+id/saturday"
-                />
-
-            <CheckBox
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/checkBox_Tuesday"
-                android:id="@+id/tuesday"
-                />
-
-            <CheckBox
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/checkBox_Monday"
-                android:id="@+id/monday"
-                />
-
-            <CheckBox
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                class="android.support.v7.widget.AppCompatCheckedTextView"
+                android:id="@+id/checkBox_Sunday"
+                android:layout_column="7"
                 android:text="@string/checkBox_Sunday"
-                android:id="@+id/sunday"
-                android:focusableInTouchMode="true"/>
+                android:checkMark="@drawable/abc_btn_check_material"
+                android:checked="false"/>
+
+            <view
+                class="android.support.v7.widget.AppCompatCheckedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox_Monday"
+                android:layout_column="8"
+                android:text="@string/checkBox_Monday"
+                android:checkMark="@drawable/abc_btn_check_material"
+                android:checked="false"/>
+
+            <view
+                class="android.support.v7.widget.AppCompatCheckedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox_Tuesday"
+                android:layout_column="9"
+                android:text="@string/checkBox_Tuesday"
+                android:checkMark="@drawable/abc_btn_check_material"
+                android:checked="false"
+                android:singleLine="false"
+                />
+
+            <view
+                class="android.support.v7.widget.AppCompatCheckedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox_Wednesday"
+                android:layout_column="10"
+                android:text="@string/checkBox_Wednesday"
+                android:checkMark="@drawable/abc_btn_check_material"
+                android:checked="false"/>
+
+            <view
+                class="android.support.v7.widget.AppCompatCheckedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/view5"
+                android:layout_column="11"
+                android:text="@string/checkBox_Monday"
+                android:checkMark="@drawable/abc_btn_check_material"
+                android:checked="false"/>
+
+            <view
+                class="android.support.v7.widget.AppCompatCheckedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/view6"
+                android:layout_column="12"
+                android:text="@string/checkBox_Monday"
+                android:checkMark="@drawable/abc_btn_check_material"
+                android:checked="false"/>
+
+            <view
+                class="android.support.v7.widget.AppCompatCheckedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/view7"
+                android:layout_column="13"
+                android:text="@string/checkBox_Monday"
+                android:checkMark="@drawable/abc_btn_check_material"
+                android:checked="false"/>
         </TableRow>
 
         <Spinner
