--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,10 @@
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
     <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="toolbar_height">56dp</dimen>
     <dimen name="fab_button_diameter">56dp</dimen>
+    <dimen name="fab_button_elevation">2dp</dimen>
+    <dimen name="fab_button_press_elevation">4dp</dimen>
     <dimen name="fab_button_margin_bottom">16dp</dimen>
     <dimen name="fab_button_margin_right">16dp</dimen>
 </resources>
